--- a/ExperimentalProbability.UI/App.xaml
+++ b/ExperimentalProbability.UI/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="ExperimentalProbabilityApp.App"
+﻿<Application x:Class="ExperimentalProbability.UI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ExperimentalProbabilityApp"
+             xmlns:local="clr-namespace:ExperimentalProbability.UI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
