--- a/ExperimentalProbability.UI/MainWindow.xaml
+++ b/ExperimentalProbability.UI/MainWindow.xaml
@@ -3,97 +3,119 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-        xmlns:local="clr-namespace:ExperimentalProbability.UI"
+        xmlns:p="assembly="
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance local:MainWindow, IsDesignTimeCreatable=True}"
         Title="Experimental Probability"
-        Height="600"
-        Width="800"
+        Height="720"
+        Width="1280"
         Background="#181818"
         FontSize="20"
         Foreground="White">
-    <DockPanel Width="auto"
-               Height="auto"
-               Margin="20">
 
-        <Grid Margin="0,0,20,0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto"/>
-            </Grid.ColumnDefinitions>
+    <DockPanel LastChildFill="True"
+               Margin="10">
 
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="auto"/>
-            </Grid.RowDefinitions>
+        <Border DockPanel.Dock="Top"
+                BorderBrush="DarkCyan"
+                BorderThickness="0,0,0,1">
 
-            <TextBlock Grid.Column="0"
-                       Grid.ColumnSpan="2"
-                       Grid.Row="0"
-                       Margin="0,0,0,20"
-                       Text="Calculation" 
-                       FontSize="24"
-                       FontWeight="Bold"
-                       TextDecorations="Underline"
-                       HorizontalAlignment="Center"/>
+            <DockPanel LastChildFill="False"
+                       Margin="0,0,0,10">
 
-            <TextBlock Grid.Column="0"
-                       Grid.Row="1"
-                       Margin="0,0,20,20"
-                       Text="Amount of simulations:"/>
+                <TextBlock x:Name="Header_Settings"
+                           DockPanel.Dock="Top"
+                           Margin="0,0,0,10"
+                           FontSize="28"
+                           FontWeight="Bold"/>
 
-            <TextBox x:Name="SimulationAmountTextBox"
-                     Grid.Column="1"
-                     Grid.Row="1"
-                     Margin="0,0,0,20"
-                     Background="#181818"
-                     Foreground="White"
-                     Text="100"
-                     TextAlignment="Right"
-                     MaxLines="1"
-                     AllowDrop="False"/>
+                <TextBlock x:Name="Text_Type"
+                           Margin="0,0,10,0"
+                           Text="Type"/>
 
-            <TextBlock x:Name="AverageResultTextBlock" Grid.Column="0"
-                       Grid.Row="3"
-                       Text="Average result = N/A"
-                       FontWeight="Bold"/>
+                <ComboBox x:Name="Box_Types"
+                          SelectedIndex="0"
+                          SelectionChanged="Box_Types_SelectionChanged"/>
 
-            <Button x:Name="CalculateButton"
-                    Grid.Column="1"
-                    Grid.Row="3"
-                    Content="Calculate"
-                    HorizontalAlignment="Right"
-                    Click="CalculateButton_Click"/>
 
-        </Grid>
-        <TextBlock DockPanel.Dock="Top"
-                   HorizontalAlignment="Center"
-                   Margin="0,0,0,20"
-                   Text="Data chart"
-                   FontSize="24"
-                   FontWeight="Bold"
-                   TextDecorations="Underline"/>
+                <TextBlock x:Name="Text_Condition"
+                           Margin="10,0,10,0"
+                           Text="Condition"/>
 
-        <Expander x:Name="ExpanderChart"
-                  Header="Expand chart"
-                  Foreground="White"
-                  FontStyle="Italic"
-                  IsExpanded="False"
-                  Cursor="Hand"
-                  Collapsed="ExpanderChart_Collapsed"
-                  Expanded="ExpanderChart_Expanded">
+                <ComboBox x:Name="Box_Conditions"
+                          Text="None" SelectionChanged="Box_Conditions_SelectionChanged"/>
 
-            <lvc:CartesianChart x:Name="DataChart"
-                                Width="auto"
-                                Height="auto">
 
-                <lvc:CartesianChart.Series>
-                    <lvc:LineSeries Values="{Binding LineValues}"/>
-                </lvc:CartesianChart.Series>
-            </lvc:CartesianChart>
-        </Expander>
+                <TextBlock x:Name="Text_Simulations" Margin="10,0,10,0"
+                           Text="Simulations"/>
+
+                <TextBox x:Name="NumberOfSimulations"
+                         Width="115"
+                         TextAlignment="Right"/>
+
+            </DockPanel>
+        </Border>
+
+        <Border DockPanel.Dock="Top"
+                BorderBrush="DarkCyan"
+                BorderThickness="0,0,0,1">
+
+            <DockPanel Margin="0,10,0,10"
+                       LastChildFill="False">
+
+                <TextBlock x:Name="Header_Description"
+                           DockPanel.Dock="Top"
+                           Margin="0,0,0,10"
+                           FontSize="28"
+                           FontWeight="Bold"/>
+
+                <TextBlock x:Name="Header_Description_Type"
+                           DockPanel.Dock="Top"
+                           FontWeight="Bold"/>
+
+                <TextBlock x:Name="Description_Type"
+                           DockPanel.Dock="Top"/>
+
+                <TextBlock x:Name="Header_Description_Condition"
+                           DockPanel.Dock="Top"
+                           Margin="0,10,0,0"
+                           FontWeight="Bold"/>
+
+                <TextBlock x:Name="Description_Condition"
+                           DockPanel.Dock="Top"/>
+
+            </DockPanel>
+        </Border>
+
+        <Button x:Name="Button_Run"
+                DockPanel.Dock="Bottom"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Bottom"
+                Margin="0,10,0,0"
+                Click="Button_Run_Click"/>
+        
+        <Border DockPanel.Dock="Top"
+                BorderBrush="DarkCyan"
+                BorderThickness="0,0,0,1">
+            
+            <DockPanel Margin="0,10,0,10"
+                       LastChildFill="False">
+
+                <TextBlock x:Name="Header_Results"
+                           DockPanel.Dock="Top"
+                           Margin="0,0,0,10"
+                           FontSize="28"
+                           FontWeight="Bold"/>
+
+                <TextBlock x:Name="Text_SimulationsRun"
+                           DockPanel.Dock="Top"/>
+
+                <TextBlock x:Name="Text_ConditionsMet"
+                           DockPanel.Dock="Top"/>
+
+                <TextBlock x:Name="Text_Probability"
+                           DockPanel.Dock="Top"/>
+
+            </DockPanel>
+        </Border>
     </DockPanel>
 </Window>
