--- a/ExperimentalProbability.UI/MainWindow.xaml
+++ b/ExperimentalProbability.UI/MainWindow.xaml
@@ -3,119 +3,123 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:p="assembly="
         mc:Ignorable="d"
-        Title="Experimental Probability"
         Height="720"
         Width="1280"
         Background="#181818"
         FontSize="20"
-        Foreground="White">
+        Foreground="White"
+        Activated="Window_Activated">
 
-    <DockPanel LastChildFill="True"
+    <DockPanel LastChildFill="False"
                Margin="10">
-
-        <Border DockPanel.Dock="Top"
-                BorderBrush="DarkCyan"
-                BorderThickness="0,0,0,1">
-
-            <DockPanel LastChildFill="False"
-                       Margin="0,0,0,10">
-
-                <TextBlock x:Name="Header_Settings"
-                           DockPanel.Dock="Top"
-                           Margin="0,0,0,10"
-                           FontSize="28"
-                           FontWeight="Bold"/>
-
-                <TextBlock x:Name="Text_Type"
-                           Margin="0,0,10,0"
-                           Text="Type"/>
-
-                <ComboBox x:Name="Box_Types"
-                          SelectedIndex="0"
-                          SelectionChanged="Box_Types_SelectionChanged"/>
-
-
-                <TextBlock x:Name="Text_Condition"
-                           Margin="10,0,10,0"
-                           Text="Condition"/>
-
-                <ComboBox x:Name="Box_Conditions"
-                          Text="None" SelectionChanged="Box_Conditions_SelectionChanged"/>
-
-
-                <TextBlock x:Name="Text_Simulations" Margin="10,0,10,0"
-                           Text="Simulations"/>
-
-                <TextBox x:Name="NumberOfSimulations"
-                         Width="115"
-                         TextAlignment="Right"/>
-
-            </DockPanel>
-        </Border>
-
-        <Border DockPanel.Dock="Top"
-                BorderBrush="DarkCyan"
-                BorderThickness="0,0,0,1">
-
-            <DockPanel Margin="0,10,0,10"
-                       LastChildFill="False">
-
-                <TextBlock x:Name="Header_Description"
-                           DockPanel.Dock="Top"
-                           Margin="0,0,0,10"
-                           FontSize="28"
-                           FontWeight="Bold"/>
-
-                <TextBlock x:Name="Header_Description_Type"
-                           DockPanel.Dock="Top"
-                           FontWeight="Bold"/>
-
-                <TextBlock x:Name="Description_Type"
-                           DockPanel.Dock="Top"/>
-
-                <TextBlock x:Name="Header_Description_Condition"
-                           DockPanel.Dock="Top"
-                           Margin="0,10,0,0"
-                           FontWeight="Bold"/>
-
-                <TextBlock x:Name="Description_Condition"
-                           DockPanel.Dock="Top"/>
-
-            </DockPanel>
-        </Border>
-
         <Button x:Name="Button_Run"
                 DockPanel.Dock="Bottom"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
-                Margin="0,10,0,0"
+                IsEnabled="False"
                 Click="Button_Run_Click"/>
-        
-        <Border DockPanel.Dock="Top"
-                BorderBrush="DarkCyan"
-                BorderThickness="0,0,0,1">
-            
-            <DockPanel Margin="0,10,0,10"
-                       LastChildFill="False">
 
-                <TextBlock x:Name="Header_Results"
+        <Border BorderBrush="DarkGoldenrod"
+                Margin="0,0,0,10"
+                Padding="0,0,10,0"
+                BorderThickness="0,0,3,3">
+            <DockPanel>
+                <TextBlock x:Name="Header1_Settings_Calculation"
                            DockPanel.Dock="Top"
-                           Margin="0,0,0,10"
+                           Margin="0,0,0,5"
                            FontSize="28"
                            FontWeight="Bold"/>
+                <StackPanel DockPanel.Dock="Top"
+                            Orientation="Horizontal"
+                            Margin="0,0,0,5">
+                    <TextBlock x:Name="Text_Simulations"
+                                   Margin="0,0,5,0"/>
+                    <TextBox x:Name="Simulations"
+                             Width="85"
+                             TextAlignment="Right"
+                             MaxLength="7"
+                             MaxLines="1"/>
+                </StackPanel>
 
-                <TextBlock x:Name="Text_SimulationsRun"
-                           DockPanel.Dock="Top"/>
+                <Border BorderBrush="DarkGoldenrod"
+                        BorderThickness="0,1,0,0">
+                    <DockPanel LastChildFill="True">
+                        <StackPanel x:Name="Panel_Settings_Condition"
+                                    DockPanel.Dock="Bottom"
+                                    Visibility="Collapsed">
+                            <TextBlock x:Name="Header2_Settings_Condition"
+                                       Margin="0,0,0,5"
+                                       FontWeight="Bold"/>
+                            <StackPanel Orientation="Horizontal"
+                                        Margin="0,0,0,5">
+                                <TextBlock x:Name="Text_Condition_NumberOfTakenItems"
+                                           Margin="0,0,5,0"/>
+                                <TextBox x:Name="Condition_NumberOfTakenItems"
+                                         Width="20"
+                                         TextAlignment="Right"
+                                         MaxLength="1"
+                                         MaxLines="1" TextChanged="Condition_NumberOfTakenItems_TextChanged"/>
+                            </StackPanel>
+                            <StackPanel x:Name="Panel_Condition_Selection_Outcome"/>
+                        </StackPanel>
 
-                <TextBlock x:Name="Text_ConditionsMet"
-                           DockPanel.Dock="Top"/>
+                        <Border x:Name="Border_Settings_Type"
+                                BorderBrush="DarkGoldenrod"
+                                BorderThickness="0,0,0,1">
+                            <StackPanel>
+                                <TextBlock x:Name="Header2_Settings_Type"
+                                        Margin="0,0,0,5"
+                                        FontWeight="Bold"/>
+                                <ComboBox x:Name="Selection_Type"
+                                        HorizontalAlignment="Left"
+                                        IsEditable="True"
+                                        IsReadOnly="True"
+                                        SelectionChanged="Selection_Type_SelectionChanged"/>
 
-                <TextBlock x:Name="Text_Probability"
-                           DockPanel.Dock="Top"/>
-
+                                <Border x:Name="Border_Settings_Pool_Size"
+                                        BorderBrush="DarkGoldenrod"
+                                        BorderThickness="0,1,0,0"
+                                        Margin="0,10,0,0"
+                                        Visibility="Collapsed">
+                                    <StackPanel>
+                                        <TextBlock x:Name="Header3_Settings_Pool"
+                                                   Margin="0,0,0,5"
+                                                   FontWeight="Bold"/>
+                                        <StackPanel Orientation="Horizontal"
+                                                    Margin="0,0,0,5">
+                                            <TextBlock x:Name="Text_Pool_Size"
+                                                       Margin="0,0,5,0"/>
+                                            <TextBox x:Name="Pool_Size"
+                                                    Width="30"
+                                                    TextAlignment="Right"
+                                                    MaxLength="2"
+                                                    MaxLines="1" TextChanged="Pool_Size_TextChanged"/>
+                                        </StackPanel>
+                                    </StackPanel>
+                                </Border>
+                            <StackPanel x:Name="Panel_Settings_Pool_ColoredBalls"
+                                        Visibility="Collapsed">
+                                <StackPanel Orientation="Horizontal"
+                                            Margin="0,0,0,5">
+                                    <TextBlock x:Name="Text_ColoredBalls_NumberOfColors"
+                                               Margin="0,0,5,0"/>
+                                    <TextBox x:Name="ColoredBalls_NumberOfColors"
+                                             Width="20"
+                                             TextAlignment="Right"
+                                             MaxLength="1"
+                                             MaxLines="1"
+                                             TextChanged="ColoredBalls_NumberOfColors_TextChanged"/>
+                                </StackPanel>
+                                <StackPanel x:Name="Panel_ColoredBalls_Selection_Color"/>
+                                    <CheckBox x:Name="ColoredBalls_Check_EqualNumberOfColors"
+                                              Foreground="White"
+                                              VerticalContentAlignment="Center"/>
+                                </StackPanel>
+                            </StackPanel>
+                        </Border>
+                    </DockPanel>
+                </Border>
             </DockPanel>
         </Border>
+        
     </DockPanel>
 </Window>
