--- a/ExperimentalProbability.UI/MainWindow.xaml
+++ b/ExperimentalProbability.UI/MainWindow.xaml
@@ -3,123 +3,143 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Height="720"
-        Width="1280"
         Background="#181818"
-        FontSize="20"
+        Width="1280"
+        Height="720"
+        MinWidth="800"
+        MinHeight="600"
+        FontSize="16"
         Foreground="White"
         Activated="Window_Activated">
 
     <DockPanel LastChildFill="False"
                Margin="10">
-        <Button x:Name="Button_Run"
-                DockPanel.Dock="Bottom"
-                IsEnabled="False"
-                Click="Button_Run_Click"/>
+        
+        <DockPanel DockPanel.Dock="Bottom"
+                   LastChildFill="False">
+            
+            <Button x:Name="Button_Run"
+                    DockPanel.Dock="Right"
+                    IsEnabled="False"
+                    Click="Button_Run_Click"/>
+            
+        </DockPanel>
 
-        <Border BorderBrush="DarkGoldenrod"
+        <Border DockPanel.Dock="Top"
+                BorderBrush="DarkCyan"
                 Margin="0,0,0,10"
-                Padding="0,0,10,0"
-                BorderThickness="0,0,3,3">
-            <DockPanel>
+                BorderThickness="0,0,0,3">
+            
+            <StackPanel Margin="0,0,0,5">
+                
                 <TextBlock x:Name="Header1_Settings_Calculation"
                            DockPanel.Dock="Top"
                            Margin="0,0,0,5"
-                           FontSize="28"
-                           FontWeight="Bold"/>
+                           FontSize="22"
+                           FontWeight="Bold">
+                </TextBlock>
+                
                 <StackPanel DockPanel.Dock="Top"
                             Orientation="Horizontal"
                             Margin="0,0,0,5">
+                    
+                    <TextBlock x:Name="Text_Selection_Type"
+                                        Margin="0,0,5,0"/>
+                    
+                    <ComboBox x:Name="Selection_Type"
+                            Margin="0,0,10,0"
+                            IsEditable="True"
+                            IsReadOnly="True"
+                            SelectionChanged="Selection_Type_SelectionChanged"/>
+                    
                     <TextBlock x:Name="Text_Simulations"
                                    Margin="0,0,5,0"/>
+                    
                     <TextBox x:Name="Simulations"
                              Width="85"
                              TextAlignment="Right"
                              MaxLength="7"
                              MaxLines="1"/>
+                    
                 </StackPanel>
 
-                <Border BorderBrush="DarkGoldenrod"
-                        BorderThickness="0,1,0,0">
-                    <DockPanel LastChildFill="True">
-                        <StackPanel x:Name="Panel_Settings_Condition"
-                                    DockPanel.Dock="Bottom"
-                                    Visibility="Collapsed">
-                            <TextBlock x:Name="Header2_Settings_Condition"
-                                       Margin="0,0,0,5"
-                                       FontWeight="Bold"/>
-                            <StackPanel Orientation="Horizontal"
-                                        Margin="0,0,0,5">
-                                <TextBlock x:Name="Text_Condition_NumberOfTakenItems"
-                                           Margin="0,0,5,0"/>
-                                <TextBox x:Name="Condition_NumberOfTakenItems"
-                                         Width="20"
-                                         TextAlignment="Right"
-                                         MaxLength="1"
-                                         MaxLines="1" TextChanged="Condition_NumberOfTakenItems_TextChanged"/>
-                            </StackPanel>
-                            <StackPanel x:Name="Panel_Condition_Selection_Outcome"/>
-                        </StackPanel>
+                <StackPanel>
+                    
+                    <TextBlock x:Name="Header2_Settings_Type"
+                            Margin="0,0,0,5"
+                            FontWeight="Bold"
+                               Visibility="Collapsed"/>
 
-                        <Border x:Name="Border_Settings_Type"
-                                BorderBrush="DarkGoldenrod"
-                                BorderThickness="0,0,0,1">
-                            <StackPanel>
-                                <TextBlock x:Name="Header2_Settings_Type"
-                                        Margin="0,0,0,5"
-                                        FontWeight="Bold"/>
-                                <ComboBox x:Name="Selection_Type"
-                                        HorizontalAlignment="Left"
-                                        IsEditable="True"
-                                        IsReadOnly="True"
-                                        SelectionChanged="Selection_Type_SelectionChanged"/>
+                    <StackPanel Orientation="Horizontal"
+                                Margin="0,0,0,5">
 
-                                <Border x:Name="Border_Settings_Pool_Size"
-                                        BorderBrush="DarkGoldenrod"
-                                        BorderThickness="0,1,0,0"
-                                        Margin="0,10,0,0"
-                                        Visibility="Collapsed">
-                                    <StackPanel>
-                                        <TextBlock x:Name="Header3_Settings_Pool"
-                                                   Margin="0,0,0,5"
-                                                   FontWeight="Bold"/>
-                                        <StackPanel Orientation="Horizontal"
-                                                    Margin="0,0,0,5">
-                                            <TextBlock x:Name="Text_Pool_Size"
-                                                       Margin="0,0,5,0"/>
-                                            <TextBox x:Name="Pool_Size"
-                                                    Width="30"
-                                                    TextAlignment="Right"
-                                                    MaxLength="2"
-                                                    MaxLines="1" TextChanged="Pool_Size_TextChanged"/>
-                                        </StackPanel>
-                                    </StackPanel>
-                                </Border>
-                            <StackPanel x:Name="Panel_Settings_Pool_ColoredBalls"
-                                        Visibility="Collapsed">
-                                <StackPanel Orientation="Horizontal"
-                                            Margin="0,0,0,5">
-                                    <TextBlock x:Name="Text_ColoredBalls_NumberOfColors"
-                                               Margin="0,0,5,0"/>
-                                    <TextBox x:Name="ColoredBalls_NumberOfColors"
-                                             Width="20"
-                                             TextAlignment="Right"
-                                             MaxLength="1"
-                                             MaxLines="1"
-                                             TextChanged="ColoredBalls_NumberOfColors_TextChanged"/>
-                                </StackPanel>
-                                <StackPanel x:Name="Panel_ColoredBalls_Selection_Color"/>
-                                    <CheckBox x:Name="ColoredBalls_Check_EqualNumberOfColors"
-                                              Foreground="White"
-                                              VerticalContentAlignment="Center"/>
-                                </StackPanel>
-                            </StackPanel>
-                        </Border>
-                    </DockPanel>
-                </Border>
-            </DockPanel>
+                        <TextBlock x:Name="Text_Pool_Size"
+                                Margin="0,0,5,0"
+                                   Visibility="Collapsed"/>
+
+                        <TextBox x:Name="Pool_Size"
+                                Width="30"
+                                 Margin="0,0,10,0"
+                                TextAlignment="Right"
+                                MaxLength="2"
+                                MaxLines="1"
+                                 Visibility="Collapsed"/>
+
+                        <TextBlock x:Name="Text_ColoredBalls_NumberOfColors"
+                                Margin="0,0,5,0"
+                                   Visibility="Collapsed"/>
+
+                        <TextBox x:Name="ColoredBalls_NumberOfColors"
+                                Width="20"
+                                TextAlignment="Right"
+                                MaxLength="1"
+                                MaxLines="1"
+                                 Visibility="Collapsed"
+                                 TextChanged="ColoredBalls_NumberOfColors_TextChanged"/>
+
+                    </StackPanel>
+
+                    <WrapPanel x:Name="Panel_ColoredBalls_Selection_Color"
+                                Orientation="Horizontal"
+                               Visibility="Collapsed"/>
+
+                </StackPanel>
+
+                
+
+                <StackPanel x:Name="Panel_Settings_Condition"
+                            Visibility="Collapsed">
+                    
+                    <TextBlock x:Name="Header2_Settings_Condition"
+                            Margin="0,0,0,5"
+                            FontWeight="Bold"/>
+                    
+                    <StackPanel Orientation="Horizontal"
+                                Margin="0,0,0,5">
+                        
+                        <TextBlock x:Name="Text_Condition_NumberOfTakenItems"
+                                Margin="0,0,5,0"/>
+                        
+                        <TextBox x:Name="Condition_NumberOfTakenItems"
+                                Width="20"
+                                TextAlignment="Right"
+                                MaxLength="1"
+                                MaxLines="1"
+                                 TextChanged="Condition_NumberOfTakenItems_TextChanged"/>
+                        
+                    </StackPanel>
+                    
+                    <WrapPanel x:Name="Panel_Condition_Selection_Outcome"
+                                Orientation="Horizontal"/>
+                    
+                </StackPanel>
+                
+            </StackPanel>
+            
         </Border>
         
     </DockPanel>
+    
 </Window>
