--- a/ExperimentalProbability.UI/App.xaml
+++ b/ExperimentalProbability.UI/App.xaml
@@ -2,7 +2,20 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
+    
     <Application.Resources>
-         
+        
+        <ResourceDictionary>
+            
+            <ResourceDictionary.MergedDictionaries>
+
+                <ResourceDictionary Source="UIElementsStyles\SystemUIElementsStyleResources.xaml"/>
+                <ResourceDictionary Source="UIElementsStyles\XceedToolkitUIElementsStyleResources.xaml" />
+                
+            </ResourceDictionary.MergedDictionaries>
+            
+        </ResourceDictionary>
+        
     </Application.Resources>
+    
 </Application>
