--- a/ExperimentalProbability.UI/UIElementsStyles/XceedToolkitUIElementsStyleResources.xaml
+++ b/ExperimentalProbability.UI/UIElementsStyles/XceedToolkitUIElementsStyleResources.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-                    xmlns:resx="clr-namespace:ExperimentalProbability.UI.Properties">
+                    xmlns:prop="clr-namespace:ExperimentalProbability.UI.Properties">
 
     <Style x:Key="IntegerUpDownDefault"
            TargetType="xctk:IntegerUpDown">
@@ -31,7 +31,58 @@
                 Value="1000"/>
 
         <Setter Property="Text"
-                Value="{x:Static resx:Resources.Default_Simulations_Value}"/>
+                Value="{x:Static prop:Resources.Default_Simulations_Value}"/>
+
+    </Style>
+
+    <Style x:Key="IntegerUpDownColoredBallsPoolSize"
+           TargetType="xctk:IntegerUpDown"
+           BasedOn="{StaticResource IntegerUpDownDefault}">
+
+        <Setter Property="Maximum"
+                Value="100"/>
+
+        <Setter Property="MaxLength"
+                Value="3"/>
+
+        <Setter Property="Minimum"
+                Value="9"/>
+
+        <Setter Property="Text"
+                Value="{x:Static prop:Resources.Default_Pool_Size_ColoredBalls}"/>
+
+    </Style>
+
+    <Style x:Key="IntegerUpDownDicePoolSize"
+           TargetType="xctk:IntegerUpDown"
+           BasedOn="{StaticResource IntegerUpDownDefault}">
+
+        <Setter Property="Maximum"
+                Value="20"/>
+
+        <Setter Property="MaxLength"
+                Value="2"/>
+
+        <Setter Property="Minimum"
+                Value="6"/>
+
+        <Setter Property="Text"
+                Value="{x:Static prop:Resources.Default_Pool_Size_Dice}"/>
+
+    </Style>
+
+    <Style x:Key="IntegerUpDownNumberOfItems"
+           TargetType="xctk:IntegerUpDown"
+           BasedOn="{StaticResource IntegerUpDownDefault}">
+
+        <Setter Property="Maximum"
+                Value="10"/>
+
+        <Setter Property="MaxLength"
+                Value="2"/>
+
+        <Setter Property="Minimum"
+                Value="1"/>
 
     </Style>
 
