--- a/ExperimentalProbability.UI/App.xaml
+++ b/ExperimentalProbability.UI/App.xaml
@@ -2,20 +2,17 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
-    
-    <Application.Resources>
-        
-        <ResourceDictionary>
-            
-            <ResourceDictionary.MergedDictionaries>
 
-                <ResourceDictionary Source="UIElementsStyles\SystemUIElementsStyleResources.xaml"/>
-                <ResourceDictionary Source="UIElementsStyles\XceedToolkitUIElementsStyleResources.xaml" />
-                
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ElementsResources\BorderResources.xaml"/>
+                <ResourceDictionary Source="ElementsResources\ComboBoxResources.xaml"/>
+                <ResourceDictionary Source="ElementsResources\IntegerUpDownResources.xaml"/>
+                <ResourceDictionary Source="ElementsResources\TextBlockResources.xaml"/>
+                <ResourceDictionary Source="ElementsResources\WindowResources.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-            
         </ResourceDictionary>
-        
     </Application.Resources>
     
 </Application>
