--- a/ExperimentalProbability.UI/ElementsResources/ComboBoxResources.xaml
+++ b/ExperimentalProbability.UI/ElementsResources/ComboBoxResources.xaml
@@ -1,12 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="ComboBox_Default" TargetType="ComboBox">
+    <Style x:Key="Style_ComboBox_Default" TargetType="ComboBox">
         <Setter Property="IsEditable" Value="True"/>
         <Setter Property="IsReadOnly" Value="True"/>
     </Style>
 
-    <Style x:Key="ComboBox_ItemSelection" TargetType="ComboBox" BasedOn="{StaticResource ComboBoxDefault}">
+    <Style x:Key="Style_ComboBox_ItemSelection" TargetType="ComboBox" BasedOn="{StaticResource Style_ComboBoxDefault}">
         <Setter Property="Margin" Value="0,0,0,5"/>
     </Style>
 
