--- a/ExperimentalProbability.UI/ElementsResources/TextBlockResources.xaml
+++ b/ExperimentalProbability.UI/ElementsResources/TextBlockResources.xaml
@@ -1,15 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="TextBlock_Header_Default" TargetType="TextBlock">
+    <Style x:Key="Style_TextBlock_Header_Default" TargetType="TextBlock">
         <Setter Property="FontWeight" Value="Bold"/>
     </Style>
-    
-    <Style x:Key="TextBlock_Header1" TargetType="TextBlock" BasedOn="{StaticResource TextBlock_Header_Default}">
+
+    <Style x:Key="Style_TextBlock_Header1" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_Header_Default}">
         <Setter Property="FontSize" Value="22"/>
     </Style>
 
-    <Style x:Key="TextBlock_Header2" TargetType="TextBlock" BasedOn="{StaticResource TextBlock_Header_Default}">
+    <Style x:Key="Style_TextBlock_Header2" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_Header_Default}">
         <Setter Property="FontSize" Value="20"/>
     </Style>
     
