--- a/ExperimentalProbability.UI/Properties/ElementsResources/BorderResources.xaml
+++ b/ExperimentalProbability.UI/Properties/ElementsResources/BorderResources.xaml
@@ -1,16 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
     <Style x:Key="Style_Border_Default" TargetType="Border">
         <Setter Property="BorderBrush" Value="DarkCyan"/>
+        <Setter Property="Padding" Value="5"/>
     </Style>
-
     <Style x:Key="Style_Border_Heavy_Top" TargetType="Border" BasedOn="{StaticResource Style_Border_Default}">
         <Setter Property="BorderThickness" Value="0,3,0,0"/>
     </Style>
-
     <Style x:Key="Style_Border_Heavy_Bottom" TargetType="Border" BasedOn="{StaticResource Style_Border_Default}">
         <Setter Property="BorderThickness" Value="0,0,0,3"/>
     </Style>
-    
+
 </ResourceDictionary>
