--- a/ExperimentalProbability.UI/Properties/ElementsResources/WindowResources.xaml
+++ b/ExperimentalProbability.UI/Properties/ElementsResources/WindowResources.xaml
@@ -1,16 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ExperimentalProbability.UI"
-                    xmlns:resx="clr-namespace:ExperimentalProbability.UI.Properties">
+                    xmlns:resx="clr-namespace:ExperimentalProbability.UI.Properties.LocalizableResources">
 
     <Style x:Key="Style_Window_MainWindow_Default" TargetType="Window">
         <Setter Property="Background" Value="Black"/>
-        <Setter Property="MinWidth" Value="800"/>
-        <Setter Property="MinHeight" Value="600"/>
         <Setter Property="FontFamily" Value="Yu Gothic"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="Foreground" Value="White"/>
-        <Setter Property="Title" Value="{x:Static resx:Resources.Window_MainWindow_Title}"/>
+        <Setter Property="Title" Value="{x:Static resx:WindowResources.Window_MainWindow_Title}"/>
     </Style>
     
 </ResourceDictionary>
