--- a/ExperimentalProbability.UI/Properties/ElementsResources/IntegerUpDownResources.xaml
+++ b/ExperimentalProbability.UI/Properties/ElementsResources/IntegerUpDownResources.xaml
@@ -1,29 +1,66 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<ResourceDictionary x:Class="ExperimentalProbability.UI.Properties.ElementsResources.IntegerUpDownResources"
+                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit">
 
     <Style x:Key="Style_IntegerUpDown_Default" TargetType="xctk:IntegerUpDown">
-        <Setter Property="AllowSpin" Value="True"/>
-        <Setter Property="ClipValueToMinMax" Value="True"/>
+        <Style.Setters>
+            <Setter Property="AllowSpin" Value="True"/>
+            <Setter Property="ClipValueToMinMax" Value="True"/>
+        </Style.Setters>
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <Trigger.Setters>
+                    <Setter Property="Value" Value="{Binding RelativeSource={RelativeSource Self}, Path=Minimum.Value}"/>
+                </Trigger.Setters>
+            </Trigger>
+        </Style.Triggers>
     </Style>
     <Style x:Key="Style_IntegerUpDown_SimulationsToRun" TargetType="xctk:IntegerUpDown" BasedOn="{StaticResource Style_IntegerUpDown_Default}">
-        <Setter Property="Increment" Value="1000"/>
-        <Setter Property="Maximum" Value="100000000"/>
-        <Setter Property="MaxLength" Value="9"/>
-        <Setter Property="Minimum" Value="1000"/>
-        <Setter Property="Value" Value="1000000"/>
+        <Style.Setters>
+            <Setter Property="Increment" Value="1000"/>
+            <Setter Property="Maximum" Value="100000000"/>
+            <Setter Property="MaxLength" Value="9"/>
+            <Setter Property="Minimum" Value="1000"/>
+            <Setter Property="Value" Value="{Binding RelativeSource={RelativeSource Self}, Path=Minimum}"/>
+        </Style.Setters>
     </Style>
     <Style x:Key="Style_IntegerUpDown_NumberOfBalls" TargetType="xctk:IntegerUpDown" BasedOn="{StaticResource Style_IntegerUpDown_Default}">
-        <Setter Property="Maximum" Value="100"/>
-        <Setter Property="MaxLength" Value="3"/>
-        <Setter Property="Minimum" Value="9"/>
-        <Setter Property="Value" Value="9"/>
+        <Style.Setters>
+            <Setter Property="Maximum" Value="100"/>
+            <Setter Property="MaxLength" Value="3"/>
+            <Setter Property="Minimum" Value="9"/>
+        </Style.Setters>
     </Style>
+    <Style x:Key="Style_IntegerUpDown_NumberOfColors" TargetType="xctk:IntegerUpDown" BasedOn="{StaticResource Style_IntegerUpDown_Default}">
+        <Style.Setters>
+            <Setter Property="Maximum" Value="10"/>
+            <Setter Property="MaxLength" Value="2"/>
+            <Setter Property="Minimum" Value="2"/>
+        </Style.Setters>
+    </Style>
+    <Style x:Key="Style_IntegerUpDown_ColorCount" TargetType="xctk:IntegerUpDown" BasedOn="{StaticResource Style_IntegerUpDown_Default}">
+        <Style.Setters>
+            <Setter Property="Maximum" Value="99"/>
+            <Setter Property="MaxLength" Value="2"/>
+            <Setter Property="Minimum" Value="1"/>
+        </Style.Setters>
+    </Style>
+
     <Style x:Key="Style_IntegerUpDown_NumberOfSides" TargetType="xctk:IntegerUpDown" BasedOn="{StaticResource Style_IntegerUpDown_Default}">
-        <Setter Property="Maximum" Value="20"/>
-        <Setter Property="MaxLength" Value="2"/>
-        <Setter Property="Minimum" Value="6"/>
-        <Setter Property="Value" Value="6"/>
+        <Style.Setters>
+            <Setter Property="Maximum" Value="20"/>
+            <Setter Property="MaxLength" Value="2"/>
+            <Setter Property="Minimum" Value="6"/>
+        </Style.Setters>
+    </Style>
+
+    <Style x:Key="Style_IntegerUpDown_NumberOfTakenItems" TargetType="xctk:IntegerUpDown" BasedOn="{StaticResource Style_IntegerUpDown_Default}">
+        <Style.Setters>
+            <Setter Property="Maximum" Value="10"/>
+            <Setter Property="MaxLength" Value="2"/>
+            <Setter Property="Minimum" Value="1"/>
+        </Style.Setters>
     </Style>
 
 </ResourceDictionary>
