--- a/ExperimentalProbability.UI/Properties/ElementsResources/TextBlockResources.xaml
+++ b/ExperimentalProbability.UI/Properties/ElementsResources/TextBlockResources.xaml
@@ -3,26 +3,138 @@
                     xmlns:resx="clr-namespace:ExperimentalProbability.UI.Properties.LocalizableResources">
 
     <Style x:Key="Style_TextBlock_Header_Default" TargetType="TextBlock">
-        <Setter Property="FontWeight" Value="Bold"/>
+        <Style.Setters>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="TextDecorations" Value="Underline"/>
+        </Style.Setters>
     </Style>
     <Style x:Key="Style_TextBlock_Header1_Default" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_Header_Default}">
-        <Setter Property="FontSize" Value="22"/>
+        <Style.Setters>
+            <Setter Property="FontSize" Value="18"/>
+        </Style.Setters>
     </Style>
     <Style x:Key="Style_TextBlock_Settings_Header1" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_Header1_Default}">
-        <Setter Property="Text" Value="{x:Static resx:WindowResources.Settings_TextBlock_Header1_Text}"/>
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.TextBlock_SettingsHeader1_Text}"/>
+        </Style.Setters>
+    </Style>
+    <Style x:Key="Style_TextBlock_Results_Header1" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_Header1_Default}">
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.TextBlock_ResultsHeader1_Text}"/>
+        </Style.Setters>
+    </Style>
+    <Style x:Key="Style_TextBlock_Tutorial_Header1" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_Header1_Default}">
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.TextBlock_TutorialHeader1_Text}"/>
+        </Style.Setters>
+    </Style>
+    <Style x:Key="Style_TextBlock_Description_Header1" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_Header1_Default}">
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.TextBlock_DescriptionHeader1_Text}"/>
+        </Style.Setters>
     </Style>
     <Style x:Key="Style_TextBlock_Header2_Default" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_Header_Default}">
-        <Setter Property="FontSize" Value="20"/>
+        <Style.Setters>
+            <Setter Property="FontSize" Value="16"/>
+        </Style.Setters>
+    </Style>
+    <Style x:Key="Style_TextBlock_Settings_TypeHeader2" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_Header2_Default}">
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.TextBlock_TypeHeader2_Text}"/>
+        </Style.Setters>
+    </Style>
+    <Style x:Key="Style_TextBlock_Settings_ConditionHeader2" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_Header2_Default}">
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.TextBlock_ConditionHeader2_Text}"/>
+        </Style.Setters>
+    </Style>
+    <Style x:Key="Style_TextBlock_Description_Header2" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_Header2_Default}">
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.TextBlock_DescriptionHeader2_Text}"/>
+        </Style.Setters>
     </Style>
 
-    <Style x:Key="Style_TextBlock_DescriptionOfUpDown_Default" TargetType="TextBlock">
-        <Setter Property="Margin" Value="0,0,5,0"/>
+    <Style x:Key="Style_TextBlock_StepDefault" TargetType="TextBlock">
+        <Style.Setters>
+            <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
+            <Setter Property="Grid.Column" Value="0"/>
+            <Setter Property="Grid.ColumnSpan" Value="2"/>
+        </Style.Setters>
     </Style>
-    <Style x:Key="Style_TextBlock_TypeSelection" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_DescriptionOfUpDown_Default}">
-        <Setter Property="Text" Value="{x:Static resx:WindowResources.Settings_TextBlock_TypeSelection_Text}"/>
+    <Style x:Key="Style_TextBlock_FirstStep" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_StepDefault}">
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.TextBlock_FirstStep_Text}"/>
+            <Setter Property="Grid.Row" Value="0"/>
+        </Style.Setters>
     </Style>
-    <Style x:Key="Style_TextBlock_SimulationsToRun" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_DescriptionOfUpDown_Default}">
-        <Setter Property="Text" Value="{x:Static resx:WindowResources.Settings_TextBlock_SimulationsToRun_Text}"/>
+    <Style x:Key="Style_TextBlock_SecondStep" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_StepDefault}">
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.TextBlock_SecondStep_Text}"/>
+            <Setter Property="Grid.Row" Value="1"/>
+        </Style.Setters>
     </Style>
-    
+    <Style x:Key="Style_TextBlock_ThirdStep" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_StepDefault}">
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.TextBlock_ThirdStep_Text}"/>
+            <Setter Property="Grid.Row" Value="2"/>
+        </Style.Setters>
+    </Style>
+    <Style x:Key="Style_TextBlock_FourthStep" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_StepDefault}">
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.TextBlock_FourthStep_Text}"/>
+            <Setter Property="Grid.Row" Value="3"/>
+        </Style.Setters>
+    </Style>
+    <Style x:Key="Style_TextBlock_SecondColumnStepDefault" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_StepDefault}">
+        <Style.Setters>
+            <Setter Property="FontStyle" Value="Italic"/>
+            <Setter Property="Grid.Column" Value="1"/>
+            <Setter Property="Grid.ColumnSpan" Value="1"/>
+        </Style.Setters>
+    </Style>
+    <Style x:Key="Style_TextBlock_FourthFirstStep" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_SecondColumnStepDefault}">
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.TextBlock_FourthFirstStep_Text}"/>
+            <Setter Property="Grid.Row" Value="4"/>
+        </Style.Setters>
+    </Style>
+    <Style x:Key="Style_TextBlock_FourthSecondStep" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_SecondColumnStepDefault}">
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.TextBlock_FourthSecondStep_Text}"/>
+            <Setter Property="Grid.Row" Value="5"/>
+        </Style.Setters>
+    </Style>
+    <Style x:Key="Style_TextBlock_FifthStep" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_StepDefault}">
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.TextBlock_FifthStep_Text}"/>
+            <Setter Property="Grid.Row" Value="6"/>
+        </Style.Setters>
+    </Style>
+
+    <Style x:Key="Style_TextBlock_DescriptionItem" TargetType="TextBlock">
+        <Style.Setters>
+            <Setter Property="TextWrapping" Value="WrapWithOverflow"/>
+        </Style.Setters>
+    </Style>
+
+    <Style x:Key="Style_TextBlock_NotAvailable" TargetType="TextBlock">
+        <Style.Setters>
+            <Setter Property="Text" Value="{x:Static resx:GeneralResources.String_NotAvailable}"/>
+        </Style.Setters>
+    </Style>
+    <Style x:Key="Style_TextBlock_ColumnItem" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_NotAvailable}">
+        <Style.Setters>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="HorizontalAlignment" Value="Right"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="TextAlignment" Value="Right"/>
+        </Style.Setters>
+    </Style>
+    <Style x:Key="Style_TextBlock_ExperimentalProbability" TargetType="TextBlock" BasedOn="{StaticResource Style_TextBlock_NotAvailable}">
+        <Style.Setters>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="FontSize" Value="15"/>
+        </Style.Setters>
+    </Style>
+
 </ResourceDictionary>
